--- a/css/main.scss
+++ b/css/main.scss
@@ -52,10 +52,33 @@ body {
    text-align:justify;
 }
 
+a {
+cursor:pointer;
+}
 
-.wrapper-for-content-outside-of-footer {
- @include outer-container;
+.content-wrapper {
+  @include outer-container;
+     min-height: 100%;
+   height: auto !important;
+   height: 100%;
+   margin: 0 auto -4em;
+}
+
+.hide-scroll {
+@include centered;
+max-width: 64em;
+ transform: translate3d(0, 0, 0);
+ @include transition (transform 1.0s ease-in 0s);
+}
+ 
+ 
+ .wrapper-hide-scroll {
+ @include centered;
+ max-width: 64em;
+   overflow:hidden;
  }
+
+
  /* -----start floating-menu with width changing
  .floating-menu {
     bottom: 0px;
@@ -118,8 +141,7 @@ end floating-menu with width changing ------*/
     width: 240px;
 	padding-top:5px;
     z-index: 4;
-	overflow-y: scroll;
-	overflow-x: hidden;
+	overflow:hidden;
 	@include transition (transform 1.0s ease-in 0s);
 	
 	> ul {
@@ -132,11 +154,6 @@ end floating-menu with width changing ------*/
     line-height: 1em;
     border-bottom: 1px solid rgba(255,255,255,0.2);
 	background: rgba(32, 31, 31, 1);
-	
-	a {
-	color: rgba(255, 255, 255, 0.54);
-	cursor: pointer;
-	}
 }
 	
     ul {
@@ -149,11 +166,6 @@ end floating-menu with width changing ------*/
 
    li {
    padding-bottom: 1em;
-   cursor: pointer;
-   a {
-	color: rgba(255, 255, 255, 0.54);
-	cursor: pointer;
-	}
 }
 }   
    }
@@ -171,9 +183,6 @@ padding: 10px;
 border-radius: 100%;
 overflow: hidden;
 left: 190px;
-cursor: pointer;
-position: absolute !important;
-z-index: 5;
 }
 
 .mask-modal {
@@ -270,7 +279,6 @@ margin-top: $gutter;
 margin-left:$gutter;
 margin-top: 0;
 padding: 12px 5px 5px;
-cursor: pointer;
 }
 
 .mobile-menu-border {
@@ -329,7 +337,6 @@ border-radius: 100%;
 padding: 2px;
 background: #7B7B7B;
 border: 1px solid rgba(255, 255, 255, 0.35);
-cursor: pointer;
 }
 
 .seach-ripple {
@@ -669,15 +676,6 @@ li:last-child {
 
 
 
-/* Start sticky footer */
- .wrapper-for-content-outside-of-footer {
-   min-height: 100%;
-   height: auto !important;
-   height: 100%;
-   margin: 0 auto -4em;
- }
-
-
 
  .footer-2, .push {
    height: 13em;
@@ -808,7 +806,6 @@ margin: 20px;
   height: 100%;
   overflow: hidden;
   border-radius: 2px;
-  cursor: pointer;
 }
 .ripple {
   position: absolute;
